# mcp-finance1

./: .dockerignore  .env.example  .env.gcp.template  .gitignore  ARCHITECTURE-BEFORE-AFTER.md  AUTOMATED-PIPELINE-GUIDE.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT_GUIDE.md  EXECUTION-LOG-ANALYSIS.md  FINAL_MCP_TEST_REPORT.md  GCP_CACHE_IMPLEMENTATION_GUIDE.md  INDICATORS-AND-SIGNALS-REVIEW.md  MCP_DATA_PERIODS_GUIDE.md  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PORTFOLIO_SECTOR_BREAKDOWN_v2.0.md  REFACTORING-AND-FREE-TIER-OPTIMIZATION.md  REFACTORING-COMPLETE.txt  REFACTORING-SUMMARY.md  REPOSITORY_SUMMARY.md  RISK_LAYER_PLAN.md  SECURITY_CLEANUP_SUMMARY.md  SKILLS_IMPLEMENTATION_PLAN.md  SKILLS_SUMMARY.md  TESTING_GUIDE.md  TEST_RESULTS_SUMMARY.md  VIEW_RESULTS.sh  VISUALIZATION_SETUP_GUIDE.md  __init__.py  backtests.yml  cloudbuild.yaml  demo_sector_analysis.py  environment.yml  guide1.md  guide2.md  guide3-reqs.md  guide4-jupyter.md  guide5-cells-explained.md  main.py  nu-fib1.py  (+14 more)
.claude/: CLAUDE.md
.claude/rules/: FOUR_LAYER_DATA_RETRIEVAL.md  GCLOUD_OPTIMIZED_DATA_RETRIEVAL.md  IMPLEMENTATION_COMPARISON.md
.claude/skills/: add-period-param.md  ai-rank.md  (+8 more)
9_mcp/: README.md
automation/: deploy.sh
cloud-run/: .dockerignore  DOCKER-SECURITY-SETUP.md  Dockerfile  calculate_indicators.py  detect_signals.py  environment.yml  main.py  rank_signals_ai.py  requirements.txt  terraform.tf  terraform.tfvars.example  test-security.sh  variables.tf
docs/: NEXTJS_4_TIER_DASHBOARD_PLAN.md  NEXTJS_INTEGRATION_PLAN.md  TECHNICAL_ANALYSIS_MCP_OVERVIEW.md
jupyter1/: 1-5.ipynb
mcp1/: server.py
nu-docs/: PERSISTENT_STORAGE_EFFICIENCY.md  add-manual-price-input-to-mcp.md  mcp-centralized-config-guide.md  mcp-data-insufficiency-bugs.md  mcp-finance-expert-enhancements.md  mcp-input-control-risk-momentum-suggestions.md  nu-backtesting-with-yfinance.md  nu-backtests-per-mcp.md
nu-logs2/: CONFIG_OVERRIDE_FIXES_v1.0.md
old_code/: ARCHIVE_GUIDE.md  README.md
scripts/: Dockerfile  build_demo_industry_data.py  build_historical_industry_data.py  cleanup.sh  deploy_gcp_cache_infrastructure.sh  fetch_and_store_all_industries.py  init-firestore.py  nu_backtest_runner.py  test-api.sh  test_backend_config.py  test_gcp_cache_workflow.py  visualize_industry_data.py
soosensitive/: BACKEND_IMPLEMENTATION_COMPLETE.md  ENVIRONMENT_TEST_REPORT.md  EXECUTION_METHODS_SUMMARY.md  FILE_REORGANIZATION_PLAN.md  FIRESTORE_CLI_REFERENCE.md  FIRESTORE_DB_REPORT.md  FIRESTORE_INDEX.md  FIRESTORE_OPTIMIZATION_GUIDE.md  FIRESTORE_QUICK_START.md  FIRESTORE_STATUS_DASHBOARD.md  GCP_SERVICES_USAGE.md  GUIDE-ENHANCED.md  GUIDE.md  PIPELINE_OPTIMIZATION_SUMMARY.md  SCRIPT_EXECUTION_REPORT.md  gcloud_mcp_test.py
technical_analysis_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: .gitignore  README.md  conftest.py  pytest.ini  run_tests.sh  test_momentum.py  test_morning_brief.py  test_portfolio_risk.py  test_scan.py  test_trade_plan.py
(+185 files in other folders)
