[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "technical-analysis-mcp-gcp"
version = "2.0.0"
description = "Technical analysis MCP server with GCP backend"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.25.0",
    "cachetools>=5.0.0",
    "google-cloud-firestore>=2.13.0",
    "google-cloud-pubsub>=2.18.0",
    "google-cloud-storage>=2.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
technical-analysis-mcp = "technical_analysis_mcp.server:main"